<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sortByPop"
                android:title="@string/sort_by_most_popular"
                app:showAsAction="never"
                />

            <item
                android:id="@+id/sortByRating"
                android:title="@string/sort_by_highest_rated"
                app:showAsAction="never" />

            <item
                android:id="@+id/sortByFavorite"
                android:title="@string/sort_by_favorite"
                app:showAsAction="never" />
        </menu>

    </item>
</menu>