<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/m_title"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/blue"
        android:elevation="8dp"
        android:fontFamily="@font/archive"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        tools:text="Movie Name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:paddingBottom="6dp">

        <ImageView
            android:id="@+id/m_poster"
            android:layout_width="150dp"
            android:layout_height="190dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/imageview_poster"
            android:scaleType="centerCrop"
            android:transitionName="@string/app_name"
            tools:src="@drawable/a" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/m_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/archive"
                android:paddingEnd="25dp"
                android:paddingStart="25dp"
                android:paddingTop="8dp"
                android:textColor="@color/white"
                android:textSize="26sp"
                tools:text="2015" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/geomanist"
                android:paddingEnd="26dp"
                android:paddingStart="26dp"
                android:text="@string/_120min"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/m_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/geomanist"
                android:paddingEnd="27dp"
                android:paddingStart="27dp"
                android:paddingTop="8dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:text="9.0/10" />

            <ru.dimorinny.floatingtextbutton.FloatingTextButton
                android:id="@+id/fav_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:floating_background_color="@color/blue"
                app:floating_left_icon="@drawable/ic_star_black_24dp"
                app:floating_title="Favorite"
                app:floating_title_color="@android:color/white" />

            <ImageButton
                android:id="@+id/movieDB"
                android:layout_width="128dp"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorPrimary"
                android:scaleType="fitXY"
                android:src="@drawable/ic_powered_by_rectangle_green_dcada16968ed648d5eb3b36bbcfdd8cdf804f723dcca775c8f2bf4cea025aad6" />

        </LinearLayout>

    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailerRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp">

            </android.support.v7.widget.RecyclerView>

            <View
                android:id="@+id/trailerLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:background="#ffffff" />

            <TextView
                android:id="@+id/m_script"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/geomanist"
                android:paddingBottom="6dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="6dp"
                android:textColor="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:background="#ffffff" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/archive"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:text="@string/reviews"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviewRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"

                >

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/m_scripts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/geomanist"
                android:padding="16dp"
                android:textColor="@color/white"
                android:visibility="gone"
                tools:text="Enable or disable favorite funcpost type while automatic" />


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</LinearLayout>